# webhook-receiver

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: .env  __init__.py  app.py
src/config/: settings.yaml
src/utils/: helper.py
webhook/: .env.copy  app.py
